Final/y.output
Terminals unused in grammar

   DEF


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: ID $@1 MK_SEMICOLON program_body END ID

    3 $@2: %empty

    4 program_body: opt_decl_list opt_func_decl_list $@2 compound_stmt

    5 opt_decl_list: decl_list
    6              | %empty

    7 decl_list: decl_list decl
    8          | decl

    9 decl: VAR id_list MK_COLON scalar_type MK_SEMICOLON
   10     | VAR id_list MK_COLON array_type MK_SEMICOLON
   11     | VAR id_list MK_COLON literal_const MK_SEMICOLON

   12 literal_const: INT_CONST
   13              | OP_SUB INT_CONST
   14              | FLOAT_CONST
   15              | OP_SUB FLOAT_CONST
   16              | SCIENTIFIC
   17              | OP_SUB SCIENTIFIC
   18              | STR_CONST
   19              | TRUE
   20              | FALSE

   21 opt_func_decl_list: func_decl_list
   22                   | %empty

   23 func_decl_list: func_decl_list func_decl
   24               | func_decl

   25 $@3: %empty

   26 $@4: %empty

   27 $@5: %empty

   28 func_decl: ID MK_LPAREN opt_param_list $@3 MK_RPAREN opt_type $@4 MK_SEMICOLON compound_stmt $@5 END ID

   29 opt_param_list: param_list
   30               | %empty

   31 param_list: param_list MK_SEMICOLON param
   32           | param

   33 param: id_list MK_COLON type

   34 id_list: id_list MK_COMMA ID
   35        | ID

   36 opt_type: MK_COLON type
   37         | %empty

   38 type: scalar_type
   39     | array_type

   40 scalar_type: INTEGER
   41            | REAL
   42            | BOOLEAN
   43            | STRING

   44 array_type: ARRAY array_index TO array_index OF type

   45 array_index: INT_CONST
   46            | OP_SUB INT_CONST

   47 stmt: compound_stmt
   48     | simple_stmt
   49     | cond_stmt
   50     | while_stmt
   51     | for_stmt
   52     | return_stmt
   53     | proc_call_stmt

   54 $@6: %empty

   55 compound_stmt: $@6 BEG opt_decl_list opt_stmt_list END

   56 opt_stmt_list: stmt_list
   57              | %empty

   58 stmt_list: stmt_list stmt
   59          | stmt

   60 simple_stmt: var_ref OP_ASSIGN boolean_expr MK_SEMICOLON

   61 $@7: %empty

   62 $@8: %empty

   63 simple_stmt: PRINT $@7 boolean_expr $@8 MK_SEMICOLON
   64            | READ boolean_expr MK_SEMICOLON

   65 proc_call_stmt: ID MK_LPAREN opt_boolean_expr_list MK_RPAREN MK_SEMICOLON

   66 $@9: %empty

   67 $@10: %empty

   68 cond_stmt: IF condition THEN opt_stmt_list $@9 ELSE opt_stmt_list $@10 END IF

   69 $@11: %empty

   70 cond_stmt: IF condition THEN opt_stmt_list $@11 END IF

   71 condition: boolean_expr

   72 $@12: %empty

   73 $@13: %empty

   74 $@14: %empty

   75 while_stmt: WHILE $@12 condition_while $@13 DO opt_stmt_list $@14 END DO

   76 condition_while: boolean_expr

   77 $@15: %empty

   78 $@16: %empty

   79 $@17: %empty

   80 for_stmt: FOR ID $@15 OP_ASSIGN loop_param TO loop_param $@16 DO opt_stmt_list $@17 END DO

   81 loop_param: INT_CONST
   82           | OP_SUB INT_CONST

   83 return_stmt: RETURN boolean_expr MK_SEMICOLON

   84 opt_boolean_expr_list: boolean_expr_list
   85                      | %empty

   86 boolean_expr_list: boolean_expr_list MK_COMMA boolean_expr
   87                  | boolean_expr

   88 boolean_expr: boolean_expr OP_OR boolean_term
   89             | boolean_term

   90 boolean_term: boolean_term OP_AND boolean_factor
   91             | boolean_factor

   92 boolean_factor: OP_NOT boolean_factor
   93               | relop_expr

   94 relop_expr: expr rel_op expr
   95           | expr

   96 rel_op: OP_LT
   97       | OP_LE
   98       | OP_EQ
   99       | OP_GE
  100       | OP_GT
  101       | OP_NE

  102 $@18: %empty

  103 expr: expr add_op $@18 term
  104     | term

  105 add_op: OP_ADD
  106       | OP_SUB

  107 $@19: %empty

  108 term: term mul_op $@19 factor
  109     | factor

  110 mul_op: OP_MUL
  111       | OP_DIV
  112       | OP_MOD

  113 factor: var_ref
  114       | OP_SUB var_ref
  115       | MK_LPAREN boolean_expr MK_RPAREN
  116       | OP_SUB MK_LPAREN boolean_expr MK_RPAREN
  117       | ID MK_LPAREN opt_boolean_expr_list MK_RPAREN
  118       | OP_SUB ID MK_LPAREN opt_boolean_expr_list MK_RPAREN
  119       | literal_const

  120 var_ref: ID
  121        | var_ref dim

  122 dim: MK_LB boolean_expr MK_RB


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY (258) 44
BEG (259) 55
BOOLEAN (260) 42
DEF (261)
DO (262) 75 80
ELSE (263) 68
END (264) 2 28 55 68 70 75 80
FALSE (265) 20
FOR (266) 80
INTEGER (267) 40
IF (268) 68 70
OF (269) 44
PRINT (270) 63
READ (271) 64
REAL (272) 41
RETURN (273) 83
STRING (274) 43
THEN (275) 68 70
TO (276) 44 80
TRUE (277) 19
VAR (278) 9 10 11
WHILE (279) 75
OP_ADD (280) 105
OP_SUB (281) 13 15 17 46 82 106 114 116 118
OP_MUL (282) 110
OP_DIV (283) 111
OP_MOD (284) 112
OP_ASSIGN (285) 60 80
OP_EQ (286) 98
OP_NE (287) 101
OP_GT (288) 100
OP_LT (289) 96
OP_GE (290) 99
OP_LE (291) 97
OP_AND (292) 90
OP_OR (293) 88
OP_NOT (294) 92
MK_COMMA (295) 34 86
MK_COLON (296) 9 10 11 33 36
MK_SEMICOLON (297) 2 9 10 11 28 31 60 63 64 65 83
MK_LPAREN (298) 28 65 115 116 117 118
MK_RPAREN (299) 28 65 115 116 117 118
MK_LB (300) 122
MK_RB (301) 122
ID (302) 2 28 34 35 65 80 117 118 120
INT_CONST (303) 12 13 45 46 81 82
FLOAT_CONST (304) 14 15
SCIENTIFIC (305) 16 17
STR_CONST (306) 18


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 2, on right: 0
$@1 (54)
    on left: 1, on right: 2
program_body (55)
    on left: 4, on right: 2
$@2 (56)
    on left: 3, on right: 4
opt_decl_list (57)
    on left: 5 6, on right: 4 55
decl_list (58)
    on left: 7 8, on right: 5 7
decl (59)
    on left: 9 10 11, on right: 7 8
literal_const (60)
    on left: 12 13 14 15 16 17 18 19 20, on right: 11 119
opt_func_decl_list (61)
    on left: 21 22, on right: 4
func_decl_list (62)
    on left: 23 24, on right: 21 23
func_decl (63)
    on left: 28, on right: 23 24
$@3 (64)
    on left: 25, on right: 28
$@4 (65)
    on left: 26, on right: 28
$@5 (66)
    on left: 27, on right: 28
opt_param_list (67)
    on left: 29 30, on right: 28
param_list (68)
    on left: 31 32, on right: 29 31
param (69)
    on left: 33, on right: 31 32
id_list (70)
    on left: 34 35, on right: 9 10 11 33 34
opt_type (71)
    on left: 36 37, on right: 28
type (72)
    on left: 38 39, on right: 33 36 44
scalar_type (73)
    on left: 40 41 42 43, on right: 9 38
array_type (74)
    on left: 44, on right: 10 39
array_index (75)
    on left: 45 46, on right: 44
stmt (76)
    on left: 47 48 49 50 51 52 53, on right: 58 59
compound_stmt (77)
    on left: 55, on right: 4 28 47
$@6 (78)
    on left: 54, on right: 55
opt_stmt_list (79)
    on left: 56 57, on right: 55 68 70 75 80
stmt_list (80)
    on left: 58 59, on right: 56 58
simple_stmt (81)
    on left: 60 63 64, on right: 48
$@7 (82)
    on left: 61, on right: 63
$@8 (83)
    on left: 62, on right: 63
proc_call_stmt (84)
    on left: 65, on right: 53
cond_stmt (85)
    on left: 68 70, on right: 49
$@9 (86)
    on left: 66, on right: 68
$@10 (87)
    on left: 67, on right: 68
$@11 (88)
    on left: 69, on right: 70
condition (89)
    on left: 71, on right: 68 70
while_stmt (90)
    on left: 75, on right: 50
$@12 (91)
    on left: 72, on right: 75
$@13 (92)
    on left: 73, on right: 75
$@14 (93)
    on left: 74, on right: 75
condition_while (94)
    on left: 76, on right: 75
for_stmt (95)
    on left: 80, on right: 51
$@15 (96)
    on left: 77, on right: 80
$@16 (97)
    on left: 78, on right: 80
$@17 (98)
    on left: 79, on right: 80
loop_param (99)
    on left: 81 82, on right: 80
return_stmt (100)
    on left: 83, on right: 52
opt_boolean_expr_list (101)
    on left: 84 85, on right: 65 117 118
boolean_expr_list (102)
    on left: 86 87, on right: 84 86
boolean_expr (103)
    on left: 88 89, on right: 60 63 64 71 76 83 86 87 88 115 116 122
boolean_term (104)
    on left: 90 91, on right: 88 89 90
boolean_factor (105)
    on left: 92 93, on right: 90 91 92
relop_expr (106)
    on left: 94 95, on right: 93
rel_op (107)
    on left: 96 97 98 99 100 101, on right: 94
expr (108)
    on left: 103 104, on right: 94 95 103
$@18 (109)
    on left: 102, on right: 103
add_op (110)
    on left: 105 106, on right: 103
term (111)
    on left: 108 109, on right: 103 104 108
$@19 (112)
    on left: 107, on right: 108
mul_op (113)
    on left: 110 111 112, on right: 108
factor (114)
    on left: 113 114 115 116 117 118 119, on right: 108 109
var_ref (115)
    on left: 120 121, on right: 60 113 114 121
dim (116)
    on left: 122, on right: 121


State 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program  go to state 2


State 1

    2 program: ID . $@1 MK_SEMICOLON program_body END ID

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: ID $@1 . MK_SEMICOLON program_body END ID

    MK_SEMICOLON  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: ID $@1 MK_SEMICOLON . program_body END ID

    VAR  shift, and go to state 6

    $default  reduce using rule 6 (opt_decl_list)

    program_body   go to state 7
    opt_decl_list  go to state 8
    decl_list      go to state 9
    decl           go to state 10


State 6

    9 decl: VAR . id_list MK_COLON scalar_type MK_SEMICOLON
   10     | VAR . id_list MK_COLON array_type MK_SEMICOLON
   11     | VAR . id_list MK_COLON literal_const MK_SEMICOLON

    ID  shift, and go to state 11

    id_list  go to state 12


State 7

    2 program: ID $@1 MK_SEMICOLON program_body . END ID

    END  shift, and go to state 13


State 8

    4 program_body: opt_decl_list . opt_func_decl_list $@2 compound_stmt

    ID  shift, and go to state 14

    $default  reduce using rule 22 (opt_func_decl_list)

    opt_func_decl_list  go to state 15
    func_decl_list      go to state 16
    func_decl           go to state 17


State 9

    5 opt_decl_list: decl_list .
    7 decl_list: decl_list . decl

    VAR  shift, and go to state 6

    $default  reduce using rule 5 (opt_decl_list)

    decl  go to state 18


State 10

    8 decl_list: decl .

    $default  reduce using rule 8 (decl_list)


State 11

   35 id_list: ID .

    $default  reduce using rule 35 (id_list)


State 12

    9 decl: VAR id_list . MK_COLON scalar_type MK_SEMICOLON
   10     | VAR id_list . MK_COLON array_type MK_SEMICOLON
   11     | VAR id_list . MK_COLON literal_const MK_SEMICOLON
   34 id_list: id_list . MK_COMMA ID

    MK_COMMA  shift, and go to state 19
    MK_COLON  shift, and go to state 20


State 13

    2 program: ID $@1 MK_SEMICOLON program_body END . ID

    ID  shift, and go to state 21


State 14

   28 func_decl: ID . MK_LPAREN opt_param_list $@3 MK_RPAREN opt_type $@4 MK_SEMICOLON compound_stmt $@5 END ID

    MK_LPAREN  shift, and go to state 22


State 15

    4 program_body: opt_decl_list opt_func_decl_list . $@2 compound_stmt

    $default  reduce using rule 3 ($@2)

    $@2  go to state 23


State 16

   21 opt_func_decl_list: func_decl_list .
   23 func_decl_list: func_decl_list . func_decl

    ID  shift, and go to state 14

    $default  reduce using rule 21 (opt_func_decl_list)

    func_decl  go to state 24


State 17

   24 func_decl_list: func_decl .

    $default  reduce using rule 24 (func_decl_list)


State 18

    7 decl_list: decl_list decl .

    $default  reduce using rule 7 (decl_list)


State 19

   34 id_list: id_list MK_COMMA . ID

    ID  shift, and go to state 25


State 20

    9 decl: VAR id_list MK_COLON . scalar_type MK_SEMICOLON
   10     | VAR id_list MK_COLON . array_type MK_SEMICOLON
   11     | VAR id_list MK_COLON . literal_const MK_SEMICOLON

    ARRAY        shift, and go to state 26
    BOOLEAN      shift, and go to state 27
    FALSE        shift, and go to state 28
    INTEGER      shift, and go to state 29
    REAL         shift, and go to state 30
    STRING       shift, and go to state 31
    TRUE         shift, and go to state 32
    OP_SUB       shift, and go to state 33
    INT_CONST    shift, and go to state 34
    FLOAT_CONST  shift, and go to state 35
    SCIENTIFIC   shift, and go to state 36
    STR_CONST    shift, and go to state 37

    literal_const  go to state 38
    scalar_type    go to state 39
    array_type     go to state 40


State 21

    2 program: ID $@1 MK_SEMICOLON program_body END ID .

    $default  reduce using rule 2 (program)


State 22

   28 func_decl: ID MK_LPAREN . opt_param_list $@3 MK_RPAREN opt_type $@4 MK_SEMICOLON compound_stmt $@5 END ID

    ID  shift, and go to state 11

    $default  reduce using rule 30 (opt_param_list)

    opt_param_list  go to state 41
    param_list      go to state 42
    param           go to state 43
    id_list         go to state 44


State 23

    4 program_body: opt_decl_list opt_func_decl_list $@2 . compound_stmt

    $default  reduce using rule 54 ($@6)

    compound_stmt  go to state 45
    $@6            go to state 46


State 24

   23 func_decl_list: func_decl_list func_decl .

    $default  reduce using rule 23 (func_decl_list)


State 25

   34 id_list: id_list MK_COMMA ID .

    $default  reduce using rule 34 (id_list)


State 26

   44 array_type: ARRAY . array_index TO array_index OF type

    OP_SUB     shift, and go to state 47
    INT_CONST  shift, and go to state 48

    array_index  go to state 49


State 27

   42 scalar_type: BOOLEAN .

    $default  reduce using rule 42 (scalar_type)


State 28

   20 literal_const: FALSE .

    $default  reduce using rule 20 (literal_const)


State 29

   40 scalar_type: INTEGER .

    $default  reduce using rule 40 (scalar_type)


State 30

   41 scalar_type: REAL .

    $default  reduce using rule 41 (scalar_type)


State 31

   43 scalar_type: STRING .

    $default  reduce using rule 43 (scalar_type)


State 32

   19 literal_const: TRUE .

    $default  reduce using rule 19 (literal_const)


State 33
